--- a/css/style.css
+++ b/css/style.css
@@ -1,130 +1,107 @@
-/* Universal selector for reseting padding and margins of all elements initially and for initializing boder-box. */
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-/* Using root scope for making color variables so, I can reuse then in whole css and convenient to change all at once. */
-:root{
-  --white-color: #fff;
-  --black-color: #000;
-  --orange-color: #ff7f00;
-  --blue-color: #0000ff;
-  --purple-color: #80007e;
-  --green-color:#d8da3d;
-}
-
-/* I have used short-hand property only when I needed to set all values otherwise I used specific property only.*/
-/* Using flexbox for aligning components column wise. */
-
-body{
-  font: 1em Georgia, 'Times New Roman', Times, serif;
-  background-color: var(--green-color);
-  color: var(--purple-color);
+body, main .address {
   display: flex;
+  color: #80007e;
+  background-color: #d8da3d;
+  font: 1em Georgia, "Times New Roman", Times, serif;
 }
 
-/* Navigation component */
-
-nav{
-  margin: 2em 2em 1em 0; /* shorhand property -> margin: top right bottom left; */
+nav {
+  margin: 2em 2em 1em 0;
 }
-
-/* Making list style none. */
-ul{
+nav ul {
   list-style-type: none;
 }
-
-/* styling li tags for padding and border. */
-
-ul li{
-  background-color: var(--white-color);
+nav ul li {
+  background-color: #fff;
   width: auto;
-  padding: 0.35em 2.5em 0.3em 0.3em;
   margin: 0.5em;
-  border-right: 1em solid var(--orange-color);
+  padding: 0.35em 2.5em 0.3em 0.3em;
+  border-right: 1em solid #ff7f00;
 }
-
-/* Using pseudo selector :nth-child for selecting even childs of li and setting blue border-color. */
-li:nth-child(even){
-  border-right-color: var(--blue-color);
-}
-
-/* if list items are hyperlinks than they will inherit the color from body and underline for hyperlink will be removed. */
-li a{
+nav ul li a {
   color: inherit;
   text-decoration: none;
 }
+nav ul li:nth-child(even) {
+  border-right-color: #0000ff;
+}
 
-/* Main component */
-
-main{
+main {
   width: auto;
   margin: 1em 1em 0 0;
-  /* using flex-grow for main so it take all the remaining width of viewport width. */
   flex-grow: 2;
 }
-
-/* All the childs of main element would have margin at bottom by using combinators. */
-main > *{
+main > * {
   margin-bottom: 0.5em;
 }
-
-h1{
+main h1 {
   margin-bottom: 0.7em;
-  /* As h1 is having different font family which is sans-serif. */
   font-family: Helvetica, Geneva, Tahoma, sans-serif;
 }
-
-.main-text{
-  /* I do not need to set border-color as it gets inherited by-default from body element. */
+main .main-text {
   border-bottom: 1px dotted;
   margin-bottom: 1em;
 }
-
-/* All the p elements of main-text class will get following styles. */
-.main-text p{
+main .main-text .div-text {
   margin-bottom: 1.2em;
 }
-
-/*  Giving bordered-text section a width. */
-.bordered-text{
-  width: 90%;
-}
-
-/* Setting general properties for p elements inside of bordered-text section. */
-.bordered-text p{
-  font-size: 1.3em;
-  /*setting color using var function. */
-  color: var(--black-color);
-  /*Border-color property inherited from body. */
-  border: 2px dashed;
-  padding: 0.4em 0.2em;
-  margin: 1em 0;
-}
-
-/* Setting the properties of 2nd <p> element using pseudo selector :nth-child(2) */
-.bordered-text p:nth-child(2){
-  text-align: right;
-  font-style: italic;
-  border: 2px dashed var(--orange-color);
-}
-
-/* Setting different properties of 3rd <p> element using pseudo selector :nth-child(3) */
-.bordered-text p:nth-child(3){
-  text-align: center;
-  font-weight: 600; 
-  border: 1px dashed var(--blue-color);
-}
-
-/* Using pseudo selector :last-child for selcting the last p element of every section element. (main element). */
-section > *:last-child {
+main .main-text:last-child {
   margin-bottom: 3em;
 }
-
-/* sub-component address. */
-.address{
-  /* fonts having italic style. */
+main .bordered-text {
+  width: 90%;
+}
+main .bordered-text .div-text {
+  color: #000;
+  padding: 0.4em 0.2em;
+  margin: 1em 0;
+  font-size: 1.3em;
+  text-align: 0;
+  border: 2px dashed #000;
+  cursor: pointer;
+}
+main .bordered-text .div-text:nth-child(2) {
+  font-style: italic;
+  text-align: right;
+  border: 2px dashed #ff7f00;
+  cursor: pointer;
+}
+main .bordered-text .div-text:nth-child(3) {
+  font-weight: 600;
+  margin-bottom: 3em;
+  text-align: center;
+  border: 1px dashed #0000ff;
+  cursor: pointer;
+}
+main .bordered-text .div-text:hover {
+  animation: bounce 1s ease-in-out 1 both;
+  -webkit-animation: bounce 1s ease-in-out 1 both;
+  -moz-animation: bounce 1s ease-in-out 1 both;
+}
+main .address {
   font-style: italic;
 }
+
+@keyframes bounce {
+  0%, 100%, 20%, 50%, 80% {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+  }
+}/*# sourceMappingURL=style.css.map */
