Modified scss file with increase in margin at bottom of last-child of every section.

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ main .main-text {
 main .main-text .div-text {
   margin-bottom: 1.2em;
 }
-main .main-text:last-child {
+main .main-text .div-text:last-child {
   margin-bottom: 3em;
 }
 main .bordered-text {
